hugr-core/src/hugr/views/snapshots/hugr_core__hugr__views__tests__mmd_empty_dfg.snap
---
source: hugr-core/src/hugr/views/tests.rs
expression: h.mermaid_string()
---
graph LR
    subgraph 0 ["(0) DFG"]
        direction LR
        1["(1) Input"]
        2["(2) Output"]
        1--"0:0<br>[]+[]"-->2
    end
